// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compute.endpoints delete 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "compute.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "DELETE",
  "url": "https://compute.api.globus.org/v2/endpoints/some-uuid",
}
`;

exports[`compute.endpoints get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "compute.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://compute.api.globus.org/v2/endpoints/some-uuid",
}
`;

exports[`compute.endpoints getAll 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "compute.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://compute.api.globus.org/v2/endpoints",
}
`;

exports[`compute.endpoints getStatus 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "compute.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://compute.api.globus.org/v2/endpoints/some-uuid/status",
}
`;

exports[`compute.endpoints update 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "35",
    "content-type": "application/json",
    "host": "compute.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "display_name": "New Display Name",
  },
  "method": "PUT",
  "url": "https://compute.api.globus.org/v3/endpoints/some-uuid",
}
`;
